[Feat] 기록 뷰 기능 구현 중
1. ListAdapter 구현완료

--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -7,7 +7,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.record.RecordFragment">
+        tools:context=".presentation.record.RecordFragment"
+       >
 
 
         <androidx.recyclerview.widget.RecyclerView
