--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -16,130 +16,282 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_calculator_"
+        android:id="@+id/tv_calculator_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
         tools:layout_editor_absoluteX="41dp"
         tools:layout_editor_absoluteY="332dp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_calculator_blank"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
         tools:layout_editor_absoluteX="143dp"
         tools:layout_editor_absoluteY="332dp" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tv_calculator_remainder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
         tools:layout_editor_absoluteX="241dp"
         tools:layout_editor_absoluteY="332dp" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tv_calculator_divide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
         tools:layout_editor_absoluteX="327dp"
         tools:layout_editor_absoluteY="331dp" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tv_calculator_num7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
         tools:layout_editor_absoluteX="36dp"
         tools:layout_editor_absoluteY="411dp" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tv_calculator_num8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
         tools:layout_editor_absoluteX="144dp"
         tools:layout_editor_absoluteY="412dp" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tv_calculator_num9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
         tools:layout_editor_absoluteX="241dp"
         tools:layout_editor_absoluteY="406dp" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/tv_calculator_multiple"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
         tools:layout_editor_absoluteX="336dp"
         tools:layout_editor_absoluteY="411dp" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/tv_calculator_num4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
         tools:layout_editor_absoluteX="36dp"
         tools:layout_editor_absoluteY="523dp" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/tv_calculator_num5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
         tools:layout_editor_absoluteX="166dp"
         tools:layout_editor_absoluteY="532dp" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/tv_calculator_num6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
         tools:layout_editor_absoluteX="255dp"
         tools:layout_editor_absoluteY="522dp" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/tv_calculator_minus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
         tools:layout_editor_absoluteX="336dp"
         tools:layout_editor_absoluteY="523dp" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/tv_calculator_num1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="34dp"
-        tools:layout_editor_absoluteY="657dp" />
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
+        tools:layout_editor_absoluteX="41dp"
+        tools:layout_editor_absoluteY="626dp" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/tv_calculator_num2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="141dp"
-        tools:layout_editor_absoluteY="643dp" />
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
+        tools:layout_editor_absoluteX="156dp"
+        tools:layout_editor_absoluteY="607dp" />
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/tv_calculator_num3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="246dp"
-        tools:layout_editor_absoluteY="643dp" />
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
+        tools:layout_editor_absoluteX="262dp"
+        tools:layout_editor_absoluteY="607dp" />
 
     <TextView
-        android:id="@+id/textView16"
+        android:id="@+id/tv_calculator_plus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="341dp"
-        tools:layout_editor_absoluteY="645dp" />
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
+        tools:layout_editor_absoluteX="337dp"
+        tools:layout_editor_absoluteY="615dp" />
+
+    <TextView
+        android:id="@+id/tv_calculator_sign"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
+        tools:layout_editor_absoluteX="24dp"
+        tools:layout_editor_absoluteY="683dp" />
+
+    <TextView
+        android:id="@+id/tv_calculator_num0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
+        tools:layout_editor_absoluteX="144dp"
+        tools:layout_editor_absoluteY="683dp" />
+
+    <TextView
+        android:id="@+id/tv_calculator_dot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
+        tools:layout_editor_absoluteX="259dp"
+        tools:layout_editor_absoluteY="675dp" />
+
+    <TextView
+        android:id="@+id/tv_calculator_equal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="9"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="35dp"
+        android:textSize="40sp"
+        android:background="@drawable/rectangle_selector"
+        tools:layout_editor_absoluteX="334dp"
+        tools:layout_editor_absoluteY="681dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
