--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Theme.SeHun" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Calculator_MVVM" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">@color/black</item>
@@ -10,9 +10,14 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <item name="android:includeFontPadding">false</item>
         <!-- Customize your theme here. -->
+        <item name="textAppearanceHeadline1">@style/TextAppearance.Num.HeadLine1</item>
+        <item name="textAppearanceHeadline2">@style/TextAppearance.Num.HeadLine2</item>
+        <item name="textAppearanceSubtitle1">@style/TextAppearance.Num.SubTitle1</item>
+        <item name="textAppearanceBody1">@style/TextAppearance.Num.Body1</item>
+
     </style>
 
 
