--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -20,12 +20,14 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fcv_calculator_torecord"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tv_calculator_minus"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_calculator_line" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_calculator_torecord" />
 
     <TextView
         android:id="@+id/tv_calculator_cancel"
