--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -9,13 +9,13 @@
     <ImageView
         android:id="@+id/iv_calculator_line"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="2dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="25dp"
         app:layout_constraintBottom_toTopOf="@+id/tv_calculator_blank"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_calculator_delete"
         app:srcCompat="@drawable/line_width_1dp" />
 
     <androidx.fragment.app.FragmentContainerView
@@ -322,73 +322,73 @@
         android:id="@+id/tv_calculator_sign"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/rectangle_selector"
         android:gravity="center"
         android:paddingStart="27dp"
         android:paddingTop="15dp"
         android:paddingEnd="27dp"
         android:paddingBottom="15dp"
+        android:text="9"
         android:textAppearance="@style/TextAppearance.Num.SubTitle1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_calculator_num0"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="9" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_calculator_num0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/rectangle_selector"
         android:gravity="center"
         android:paddingStart="27dp"
         android:paddingTop="15dp"
         android:paddingEnd="27dp"
         android:paddingBottom="15dp"
+        android:text="9"
         android:textAppearance="@style/TextAppearance.Num.SubTitle1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_calculator_dot"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/tv_calculator_sign"
-        android:text="9" />
+        app:layout_constraintStart_toEndOf="@+id/tv_calculator_sign" />
 
     <TextView
         android:id="@+id/tv_calculator_dot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/rectangle_selector"
         android:gravity="center"
         android:paddingStart="27dp"
         android:paddingTop="15dp"
         android:paddingEnd="27dp"
         android:paddingBottom="15dp"
+        android:text="9"
         android:textAppearance="@style/TextAppearance.Num.SubTitle1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_calculator_equal"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/tv_calculator_num0"
-        android:text="9" />
+        app:layout_constraintStart_toEndOf="@+id/tv_calculator_num0" />
 
     <TextView
         android:id="@+id/tv_calculator_equal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/rectangle_selector"
         android:gravity="center"
         android:paddingStart="27dp"
         android:paddingTop="15dp"
         android:paddingEnd="27dp"
         android:paddingBottom="15dp"
+        android:text="9"
         android:textAppearance="@style/TextAppearance.Num.SubTitle1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/tv_calculator_dot"
-        android:text="9" />
+        app:layout_constraintStart_toEndOf="@+id/tv_calculator_dot" />
 
     <ImageView
         android:id="@+id/iv_calculator_delete"
@@ -404,33 +404,35 @@
     <TextView
         android:id="@+id/tv_calculator_output"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/rectangle_border_2dp_black200"
         android:gravity="end"
         android:paddingStart="10dp"
         android:paddingTop="40dp"
         android:paddingEnd="15dp"
         android:paddingBottom="40dp"
+        android:text="5 + 22 = 27"
         android:textAppearance="@style/TextAppearance.Num.HeadLine2"
+        app:layout_constraintBottom_toTopOf="@+id/iv_calculator_torecord"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="5 + 22 = 27" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_calculator_torecord"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
         android:layout_marginEnd="250dp"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/iv_calculator_line"
         app:layout_constraintEnd_toStartOf="@+id/iv_calculator_delete"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_calculator_output"
         app:srcCompat="@drawable/ic_history" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
