--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".presentation.record.RecordFragment"
-        android:background="@color/white">
+        android:background="@color/black"
+        android:backgroundTint="@color/black">
 
 
         <androidx.recyclerview.widget.RecyclerView
